--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "morgan": "1.9.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "chai": "4.1.2",
     "mocha": "5.2.0",
     "proxyquire": "2.0.1",
     "sinon": "5.1.1",
