Added keywords to package.json

--- a/package.json
+++ b/package.json
@@ -23,5 +23,392 @@
   },
   "bin": {
     "ccxt-rest": "./bin/www"
-  }
+  },
+  "keywords": [
+    "algorithmic",
+    "algotrading",
+    "altcoin",
+    "altcoins",
+    "api",
+    "arbitrage",
+    "backtest",
+    "backtesting",
+    "bitcoin",
+    "bot",
+    "btc",
+    "cny",
+    "coin",
+    "coins",
+    "crypto",
+    "cryptocurrency",
+    "crypto currency",
+    "crypto market",
+    "currency",
+    "currencies",
+    "darkcoin",
+    "dash",
+    "digital currency",
+    "doge",
+    "dogecoin",
+    "e-commerce",
+    "etc",
+    "eth",
+    "ether",
+    "ethereum",
+    "exchange",
+    "exchanges",
+    "eur",
+    "framework",
+    "invest",
+    "investing",
+    "investor",
+    "library",
+    "light",
+    "litecoin",
+    "ltc",
+    "market",
+    "market data",
+    "markets",
+    "merchandise",
+    "merchant",
+    "minimal",
+    "ohlcv",
+    "order",
+    "orderbook",
+    "order book",
+    "price",
+    "price data",
+    "pricefeed",
+    "private",
+    "public",
+    "ripple",
+    "strategy",
+    "ticker",
+    "tickers",
+    "toolkit",
+    "trade",
+    "trader",
+    "trading",
+    "usd",
+    "volume",
+    "xbt",
+    "xrp",
+    "zec",
+    "zerocoin",
+    "1Broker",
+    "1BTCXE",
+    "ACX",
+    "acx.io",
+    "allcoin",
+    "allcoin.com",
+    "ANX",
+    "ANXPro",
+    "bibox",
+    "bibox.com",
+    "Binance",
+    "binance.com",
+    "bit2c.co.il",
+    "Bit2C",
+    "BitBay",
+    "BitBays",
+    "bitcoincoid",
+    "Bitcoin.co.id",
+    "Bitfinex",
+    "bitFLyer",
+    "bitflyer.jp",
+    "bithumb",
+    "bithumb.com",
+    "bitlish",
+    "BitMarket",
+    "BitMEX",
+    "Bitso",
+    "Bitstamp",
+    "Bittrex",
+    "BL3P",
+    "Bleutrade",
+    "bleutrade.com",
+    "BlinkTrade",
+    "braziliex",
+    "braziliex.com",
+    "BtcBox",
+    "btcbox.co.jp",
+    "BTCC",
+    "BTCChina",
+    "BTC-e",
+    "BTCe",
+    "BTCExchange",
+    "btcexchange.ph",
+    "BTC Markets",
+    "btcmarkets",
+    "btcmarkets.net",
+    "BTCTrader",
+    "btctrader.com",
+    "btc-trade.com.ua",
+    "BTC Trade UA",
+    "BTCTurk",
+    "btcturk.com",
+    "BTCX",
+    "btc-x",
+    "bter",
+    "Bter.com",
+    "BX.in.th",
+    "ccex",
+    "C-CEX",
+    "cex",
+    "CEX.IO",
+    "CHBTC",
+    "ChileBit",
+    "chilebit.net",
+    "coincheck",
+    "CoinExchange",
+    "coinexchange.io",
+    "coingi",
+    "coingi.com",
+    "CoinMarketCap",
+    "CoinMate",
+    "Coinsecure",
+    "CoinSpot",
+    "coinspot.com.au",
+    "Crypto Capital",
+    "cryptocapital.co",
+    "Cryptopia",
+    "cryptopia.co.nz",
+    "DSX",
+    "dsx.uk",
+    "EXMO",
+    "flowBTC",
+    "flowbtc.com",
+    "FoxBit",
+    "foxbit.exchange",
+    "FYB-SE",
+    "FYB-SG",
+    "Gatecoin",
+    "GDAX",
+    "Gemini",
+    "HitBTC",
+    "Huobi",
+    "HuobiPRO",
+    "huobi.pro",
+    "Independent Reserve",
+    "independentreserve.com",
+    "itBit",
+    "jubi.com",
+    "Kraken",
+    "Kucoin",
+    "Kuna",
+    "LakeBTC",
+    "lakebtc.com",
+    "LiveCoin",
+    "Liqui",
+    "liqui.io",
+    "luno",
+    "mercado",
+    "MercadoBitcoin",
+    "mercadobitcoin.br",
+    "mixcoins",
+    "mixcoins.com",
+    "nova",
+    "novaexchange",
+    "novaexchange.com",
+    "OKCoin",
+    "OKCoin.com",
+    "OKCoin.cn",
+    "OKEX",
+    "okex.com",
+    "Paymium",
+    "Poloniex",
+    "QuadrigaCX",
+    "Qryptos",
+    "QUOINEX",
+    "Southxchange",
+    "SurBitcoin",
+    "surbitcoin.com",
+    "Tidex",
+    "tidex.com",
+    "TheRockTrading",
+    "UrduBit",
+    "urdubit.com",
+    "Vaultoro",
+    "VBTC",
+    "vbtc.exchange",
+    "vbtc.vn",
+    "VirWoX",
+    "WEX",
+    "wex.nz",
+    "xBTCe",
+    "xbtce.com",
+    "YoBit",
+    "yobit.net",
+    "YUNBI",
+    "Zaif",
+    "ZB",
+    "1btcxe.com",
+    "Allcoin",
+    "anxpro.com",
+    "anybits.com",
+    "Anybits",
+    "bcex.top",
+    "BCEX",
+    "Bibox",
+    "big.one",
+    "BigONE",
+    "bitbank.cc",
+    "bitbank",
+    "bitbay.net",
+    "bitfinex.com",
+    "bitFlyer",
+    "bitforex.com",
+    "Bitforex",
+    "Bithumb",
+    "bitibu.com",
+    "Bitibu",
+    "bitkk.com",
+    "bitkk",
+    "bitlish.com",
+    "Bitlish",
+    "bitmarket.pl",
+    "bitmarket.net",
+    "bitmex.com",
+    "bitsane.com",
+    "Bitsane",
+    "bitso.com",
+    "bitstamp.net",
+    "bittrex.com",
+    "bit-z.com",
+    "Bit-Z",
+    "bl3p.eu",
+    "bitonic.nl",
+    "Braziliex",
+    "btc-alpha.com",
+    "BTC-Alpha",
+    "btcchina.com",
+    "btctrade.im",
+    "BtcTrade.im",
+    "buda.com",
+    "Buda",
+    "bx.in.th",
+    "c-cex.com",
+    "cex.io",
+    "trade.chbtc.com",
+    "cobinhood.com",
+    "COBINHOOD",
+    "coinbase.com",
+    "Coinbase",
+    "prime.coinbase.com",
+    "Coinbase Prime",
+    "pro.coinbase.com",
+    "Coinbase Pro",
+    "coincheck.com",
+    "coinegg.com",
+    "CoinEgg",
+    "coinex.com",
+    "CoinEx",
+    "coinfalcon.com",
+    "CoinFalcon",
+    "coinfloor.co.uk",
+    "coinfloor",
+    "Coingi",
+    "coinmarketcap.com",
+    "coinmate.io",
+    "coinnest.co.kr",
+    "coinnest",
+    "coinone.co.kr",
+    "CoinOne",
+    "cointiger.pro",
+    "CoinTiger",
+    "coolcoin.com",
+    "CoolCoin",
+    "coss.io",
+    "COSS",
+    "crex24.com",
+    "CREX24",
+    "cryptonbtc.com",
+    "Crypton",
+    "deribit.com",
+    "Deribit",
+    "ethfinex.com",
+    "Ethfinex",
+    "exmo.me",
+    "exx.com",
+    "EXX",
+    "fcoin.com",
+    "FCoin",
+    "trader.flowbtc.com",
+    "fybse.se",
+    "fybsg.com",
+    "gatecoin.com",
+    "gate.io",
+    "Gate.io",
+    "gdax.com",
+    "gemini.com",
+    "getbtc.org",
+    "GetBTC",
+    "hadax.com",
+    "HADAX",
+    "hitbtc.com",
+    "Huobi Pro",
+    "huobi.com.ru",
+    "Huobi Russia",
+    "ice3x.com",
+    "ice3x.co.za",
+    "ICE3X",
+    "indodax.com",
+    "INDODAX",
+    "itbit.com",
+    "kkex.com",
+    "KKEX",
+    "kraken.com",
+    "kucoin.com",
+    "KuCoin",
+    "kuna.io",
+    "lbank.info",
+    "LBank",
+    "liquid.com",
+    "Liquid",
+    "livecoin.net",
+    "luno.com",
+    "lykke.com",
+    "Lykke",
+    "mercadobitcoin.com.br",
+    "Mercado Bitcoin",
+    "MixCoins",
+    "negociecoins.com.br",
+    "NegocieCoins",
+    "Novaexchange",
+    "okcoin.cn",
+    "OKCoin CNY",
+    "okcoin.com",
+    "OKCoin USD",
+    "paymium.com",
+    "poloniex.com",
+    "quadrigacx.com",
+    "rightbtc.com",
+    "RightBTC",
+    "southxchange.com",
+    "SouthXchange",
+    "stronghold.co",
+    "Stronghold",
+    "theocean.trade",
+    "The Ocean",
+    "therocktrading.com",
+    "tidebit.com",
+    "TideBit",
+    "uex.com",
+    "UEX",
+    "upbit.com",
+    "Upbit",
+    "vaultoro.com",
+    "virwox.com",
+    "yunbi.com",
+    "zaif.jp",
+    "zb.com",
+    "fcoinjp.com",
+    "FCoinJP",
+    "binance.je",
+    "Binance Jersey",
+    "bequant.io",
+    "Bequant",
+    "mandalaex.com",
+    "Mandala"
+  ]
 }
