--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js:
 
 before_install:
   - npm i -g makeshift && makeshift -r https://registry.npmjs.org
+
+script:
+  - npm test
+  - npm run generate:docs
 deploy:
   provider: npm
   email: franz@see.net.ph
