--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 script:
   - npm test
   - npm run generate:docs
-  - docker build -t franzsee/ccxt-rest:testing
+  - docker build -t franzsee/ccxt-rest:testing .
 deploy:
   provider: npm
   email: franz@see.net.ph
