Modified travis so that instead of doing 'npm run generate:docs' it will instead do 'npm pack' so that it's much closer to npm publish with the actual publication

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 
 script:
   - npm test
-  - npm run generate:docs
+  - npm pack
   - docker build -t franzsee/ccxt-rest:testing .
 deploy:
   provider: npm
