--- a/package.json
+++ b/package.json
@@ -402,13 +402,17 @@
   "readme": "README.md",
   "main": "app.js",
   "dependencies": {
+    "bignumber.js": "^8.1.1",
     "ccxt": "^1.18.437",
     "circular-json": "^0.5.9",
+    "ethereumjs-abi": "^0.6.7",
+    "ethereumjs-util": "^6.1.0",
     "express": "^4.12.3",
     "swagger": "^0.7.5",
     "swagger-express-mw": "^0.1.0",
     "swagger-tools": "^0.10.4",
-    "swagger-ui": "^3.22.0"
+    "swagger-ui": "^3.22.0",
+    "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
     "chai": "^4.2.0",
