--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ccxt-rest",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Open Source Unified REST API of 100+ Crypto Exchange Sites",
   "repository": {
     "type": "git",
@@ -408,6 +408,7 @@
     "ethereumjs-abi": "^0.6.7",
     "ethereumjs-util": "^6.1.0",
     "express": "^4.12.3",
+    "js-yaml": "^3.13.1",
     "swagger": "^0.7.5",
     "swagger-express-mw": "^0.1.0",
     "swagger-tools": "^0.10.4",
@@ -424,13 +425,15 @@
     "widdershins": "^3.6.7"
   },
   "scripts": {
-    "start": "node app.js",
-    "test": "./node_modules/.bin/swagger project test",
-    "prepack": "npm run generate:docs",
+    "postinstall": "npm run swagger:verify_version",
+    "start": "npm run swagger:verify_version && node app.js",
+    "test": "npm run swagger:verify_version && ./node_modules/.bin/swagger project test",
+    "prepack": "npm run swagger:verify_version && npm run generate:docs",
     "generate:client": "rm -rf ./clients/$lang && docker run --rm -v ${PWD}:/local swaggerapi/swagger-codegen-cli generate --api-package ph.adroit.ccxtrest.api --model-package ph.adroit.ccxtrest.model --invoker-package ph.adroit.ccxtrest.invoker --group-id ph.adoit.ccxtrest --artifact-id ccxt-rest-$lang-client --artifact-version $npm_package_version -c /local/config.json --additional-properties scmConnection=\"scm:git:git@github.com:franz-see/ccxt-rest-$lang-client.git\" --additional-properties scmDeveloperConnection=\"scm:git:git@github.com:franz-see/ccxt-rest-$lang-client.git\" --additional-properties scmUrl=\"https://github.com/franz-see/ccxt-rest-$lang-client\" --additional-properties artifactUrl=\"https://github.com/franz-see/ccxt-rest-$lang-client\" --additional-properties artifactDescription=\"ccxt-rest $lang client\" -i /local/api/swagger/swagger.yaml -l $lang -o /local/clients/$lang",
     "generate:clients": "for lang in `cat codegen_languages.txt`; do lang=$lang npm run generate:client; done",
     "generate:docs": "node ./scripts/generate-docs.js",
-    "swagger:edit": "./node_modules/.bin/swagger project edit"
+    "swagger:edit": "./node_modules/.bin/swagger project edit",
+    "swagger:verify_version": "node ./scripts/verify-swagger-version.js"
   },
   "bin": {
     "ccxt-rest": "./bin/www"
