--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
   - npm install
   - npm test
   - npm pack
-  - docker build -t franzsee/ccxt-rest:testing .
+  - npm run test:dockerbuild
 
 deploy:
   - provider: pages
