--- a/package.json
+++ b/package.json
@@ -403,28 +403,26 @@
   "main": "app.js",
   "dependencies": {
     "bignumber.js": "^8.1.1",
+    "body-parser": "^1.18.3",
     "ccxt": "^1.18.481",
     "ethereumjs-abi": "^0.6.7",
     "ethereumjs-util": "^6.1.0",
     "express": "^4.16.4",
-    "swagger": "^0.7.5",
-    "swagger-express-mw": "^0.7.0",
-    "swagger-tools": "^0.10.4",
-    "swagger-ui": "^3.22.1",
-    "web3": "^1.0.0-beta.37"
+    "js-yaml": "^3.13.1",
+    "oas-tools": "^2.1.4",
+    "web3": "^1.0.0-beta.52"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "js-yaml": "^3.13.1",
+    "mocha": "^6.1.4",
     "mochawesome": "^3.1.2",
     "should": "^7.1.0",
     "supertest": "^4.0.2",
-    "swagger-editor": "^3.6.27",
     "uri-js": "^4.2.2",
     "widdershins": "^3.6.7"
   },
   "scripts": {
-    "postinstall": "npm run swagger:verify_version",
+    "postinstall": "npm run swagger:verify_version && rm -rf ./node_modules/oas-tools/.git",
     "start": "npm run swagger:verify_version && node app.js",
     "test": "npm run swagger:verify_version && ./node_modules/.bin/mocha test/ --recursive --reporter mochawesome --reporter-options reportDir=./out/mochawesome-report,reportTitle='CCXT-REST Test Results',reportPageTitle='CCXT-REST Test Results'; mkdir -p ./out/publish; cp -R ./out/mochawesome-report ./out/publish/test-results; cp ./out/publish/test-results/mochawesome.html ./out/publish/test-results/index.html",
     "test:dockerbuild": "docker build -t franzsee/ccxt-rest:testing .",
@@ -433,7 +431,6 @@
     "generate:client": "rm -rf ./clients/$lang && docker run --rm -v ${PWD}:/local swaggerapi/swagger-codegen-cli generate --api-package ph.adroit.ccxtrest.api --model-package ph.adroit.ccxtrest.model --invoker-package ph.adroit.ccxtrest.invoker --group-id ph.adoit.ccxtrest --artifact-id ccxt-rest-$lang-client --artifact-version $npm_package_version -c /local/config.json --additional-properties scmConnection=\"scm:git:git@github.com:franz-see/ccxt-rest-$lang-client.git\" --additional-properties scmDeveloperConnection=\"scm:git:git@github.com:franz-see/ccxt-rest-$lang-client.git\" --additional-properties scmUrl=\"https://github.com/franz-see/ccxt-rest-$lang-client\" --additional-properties artifactUrl=\"https://github.com/franz-see/ccxt-rest-$lang-client\" --additional-properties artifactDescription=\"ccxt-rest $lang client\" -i /local/api/swagger/swagger.yaml -l $lang -o /local/clients/$lang",
     "generate:clients": "for lang in `cat codegen_languages.txt`; do lang=$lang npm run generate:client; done",
     "generate:docs": "node ./scripts/generate-docs.js",
-    "swagger:edit": "./node_modules/.bin/swagger project edit",
     "swagger:verify_version": "node ./scripts/verify-swagger-version.js"
   },
   "bin": {
