--- a/package.json
+++ b/package.json
@@ -403,6 +403,7 @@
   "readme": "README.md",
   "main": "app.js",
   "dependencies": {
+    "async": "^2.6.2",
     "bignumber.js": "^8.1.1",
     "body-parser": "^1.18.3",
     "ccxt": "^1.18.489",
@@ -410,6 +411,7 @@
     "ethereumjs-util": "^6.1.0",
     "express": "^4.16.4",
     "js-yaml": "^3.13.1",
+    "jsonwebtoken": "^8.5.1",
     "oas-tools": "^2.1.4",
     "web3": "^1.0.0-beta.52"
   },
