--- a/package.json
+++ b/package.json
@@ -413,6 +413,8 @@
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "oas-tools": "^2.1.4",
+    "sequelize": "^5.7.6",
+    "umzug": "^2.2.0",
     "web3": "^1.0.0-beta.52"
   },
   "devDependencies": {
