Modified exchange-summary so that at REPORT_ONLY=1, tests cannot fail with a timeout (without REPORT_ONLY=1, tests will still fail due to timeouts)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 script:
   - npm install
   - npm test
-  - REPORT_ONLY=1 npm run generate:exchangeSummary || echo "Ignore errors and timeouts"
+  - REPORT_ONLY=1 npm run generate:exchangeSummary
   - npm pack
   - npm run test:dockerbuild
   
