--- a/package.json
+++ b/package.json
@@ -417,7 +417,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.1.4",
+    "mocha": "^5.2.0",
+    "mocha-parallel-tests": "^2.1.0",
     "mochawesome": "^3.1.2",
     "should": "^7.1.0",
     "supertest": "^4.0.2",
@@ -431,7 +432,7 @@
     "test": "npm run swagger:verify_version && ./node_modules/.bin/mocha test/ --recursive --reporter mochawesome --reporter-options reportDir=./out/mochawesome-report,reportTitle='CCXT-REST Test Results',reportPageTitle='CCXT-REST Test Results'",
     "posttest": "mkdir -p ./out/publish; cp -R ./out/mochawesome-report ./out/publish/test-results; cp ./out/publish/test-results/mochawesome.html ./out/publish/test-results/index.html",
     "test:dockerbuild": "docker build -t franzsee/ccxt-rest:testing .",
-    "generate:exchangeSummary": "EXPLORE=1 ./node_modules/.bin/mocha test/exchange-summary.js --reporter mochawesome --reporter-options reportDir=./out/exchange-summary,reportTitle='CCXT-REST Exchange Support',reportPageTitle='CCXT-REST Exchange Support'",
+    "generate:exchangeSummary": "node ./scripts/exchange-summary-dashboard",
     "postgenerate:exchangeSummary": "mkdir -p ./out/publish; cp -R ./out/exchanges/ ./out/publish/exchanges",
     "prepack": "npm run swagger:verify_version && npm run generate:docs",
     "generate:client": "rm -rf ./clients/$lang && docker run --rm -v ${PWD}:/local swaggerapi/swagger-codegen-cli generate --api-package ph.adroit.ccxtrest.api --model-package ph.adroit.ccxtrest.model --invoker-package ph.adroit.ccxtrest.invoker --group-id ph.adoit.ccxtrest --artifact-id ccxt-rest-$lang-client --artifact-version $npm_package_version -c /local/config.json --additional-properties scmConnection=\"scm:git:git@github.com:franz-see/ccxt-rest-$lang-client.git\" --additional-properties scmDeveloperConnection=\"scm:git:git@github.com:franz-see/ccxt-rest-$lang-client.git\" --additional-properties scmUrl=\"https://github.com/franz-see/ccxt-rest-$lang-client\" --additional-properties artifactUrl=\"https://github.com/franz-see/ccxt-rest-$lang-client\" --additional-properties artifactDescription=\"ccxt-rest $lang client\" -i /local/api/swagger/swagger.yaml -l $lang -o /local/clients/$lang",
