Fixed failing tests

--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,8 @@ config/runtime.yaml
 ## ccxt-rest specifics
 clients
 out
-.secret_key
 scripts/exchange-summary-dashboard/generated/**
+database.sqlite3
 
 # After npm pack
 ccxt-rest-*.tgz
