--- a/package.json
+++ b/package.json
@@ -412,8 +412,14 @@
     "express": "^4.16.4",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
+    "mariadb": "^2.0.3",
+    "mysql2": "^1.6.5",
     "oas-tools": "^2.1.4",
+    "pg": "^7.10.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^5.7.6",
+    "sqlite3": "^4.0.6",
+    "tedious": "^6.1.1",
     "umzug": "^2.2.0",
     "web3": "^1.0.0-beta.52"
   },
@@ -430,8 +436,9 @@
   "scripts": {
     "postinstall": "npm run swagger:verify_version && rm -rf ./node_modules/oas-tools/.git",
     "prestart": "npm run swagger:verify_version",
-    "start": "node app.js",
-    "test": "npm run swagger:verify_version && ./node_modules/.bin/mocha test/ --recursive --reporter mochawesome --reporter-options reportDir=./out/mochawesome-report,reportTitle='CCXT-REST Test Results',reportPageTitle='CCXT-REST Test Results'",
+    "start": "node ./bin/www",
+    "prpestart": "npm run swagger:verify_version",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha test/ --recursive --reporter mochawesome --reporter-options reportDir=./out/mochawesome-report,reportTitle='CCXT-REST Test Results',reportPageTitle='CCXT-REST Test Results'",
     "posttest": "mkdir -p ./out/publish; cp -R ./out/mochawesome-report ./out/publish/test-results; cp ./out/publish/test-results/mochawesome.html ./out/publish/test-results/index.html",
     "test:dockerbuild": "docker build -t franzsee/ccxt-rest:testing .",
     "generate:exchangeSummary": "node ./scripts/exchange-summary-dashboard",
