--- a/package.json
+++ b/package.json
@@ -407,9 +407,11 @@
     "bignumber.js": "^8.1.1",
     "body-parser": "^1.18.3",
     "ccxt": "^1.18.489",
+    "circular-json": "^0.5.9",
     "ethereumjs-abi": "^0.6.7",
     "ethereumjs-util": "^6.1.0",
     "express": "^4.16.4",
+    "flatted": "^2.0.0",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.0.3",
@@ -441,7 +443,7 @@
     "test": "NODE_ENV=test ./node_modules/.bin/mocha test/ --recursive --reporter mochawesome --reporter-options reportDir=./out/mochawesome-report,reportTitle='CCXT-REST Test Results',reportPageTitle='CCXT-REST Test Results'",
     "posttest": "mkdir -p ./out/publish; cp -R ./out/mochawesome-report ./out/publish/test-results; cp ./out/publish/test-results/mochawesome.html ./out/publish/test-results/index.html",
     "test:dockerbuild": "docker build -t franzsee/ccxt-rest:testing .",
-    "generate:exchangeSummary": "node ./scripts/exchange-summary-dashboard",
+    "generate:exchangeSummary": "NODE_ENV=test node ./scripts/exchange-summary-dashboard",
     "postgenerate:exchangeSummary": "mkdir -p ./out/publish; cp -R ./out/exchanges/ ./out/publish/exchanges",
     "prepack": "npm run swagger:verify_version && npm run generate:docs",
     "generate:client": "rm -rf ./clients/$lang && docker run --rm -v ${PWD}:/local swaggerapi/swagger-codegen-cli generate --api-package ph.adroit.ccxtrest.api --model-package ph.adroit.ccxtrest.model --invoker-package ph.adroit.ccxtrest.invoker --group-id ph.adoit.ccxtrest --artifact-id ccxt-rest-$lang-client --artifact-version $npm_package_version -c /local/config.json --additional-properties scmConnection=\"scm:git:git@github.com:franz-see/ccxt-rest-$lang-client.git\" --additional-properties scmDeveloperConnection=\"scm:git:git@github.com:franz-see/ccxt-rest-$lang-client.git\" --additional-properties scmUrl=\"https://github.com/franz-see/ccxt-rest-$lang-client\" --additional-properties artifactUrl=\"https://github.com/franz-see/ccxt-rest-$lang-client\" --additional-properties artifactDescription=\"ccxt-rest $lang client\" -i /local/api/swagger/swagger.yaml -l $lang -o /local/clients/$lang",
