--- a/package.json
+++ b/package.json
@@ -429,6 +429,7 @@
     "mocha": "^5.2.0",
     "mocha-parallel-tests": "^2.1.0",
     "mochawesome": "^3.1.2",
+    "redoc-cli": "^0.8.3",
     "should": "^7.1.0",
     "supertest": "^4.0.2",
     "uri-js": "^4.2.2",
