--- a/package.json
+++ b/package.json
@@ -441,6 +441,7 @@
     "start": "NODE_ENV=development node ./bin/www",
     "prpestart": "npm run swagger:verify_version",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha test/ --recursive --reporter mochawesome --reporter-options reportDir=./out/mochawesome-report,reportTitle='CCXT-REST Test Results',reportPageTitle='CCXT-REST Test Results'",
+    "test:integration": "NODE_ENV=test node ./scripts/integration-tests",
     "posttest": "mkdir -p ./out/publish; cp -R ./out/mochawesome-report ./out/publish/test-results; cp ./out/publish/test-results/mochawesome.html ./out/publish/test-results/index.html",
     "test:dockerbuild": "docker build -t franzsee/ccxt-rest:testing .",
     "generate:exchangeSummary": "NODE_ENV=test node ./scripts/exchange-summary-dashboard",
