--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 script:
   - npm install
   - npm test
+  - npm run test:integration
   - REPORT_ONLY=1 npm run generate:exchangeSummary
   - npm pack
   - npm run test:dockerbuild
