--- a/package.json
+++ b/package.json
@@ -499,7 +499,7 @@
     "postinstall": "npm run swagger:verify_version && rm -rf ./node_modules/oas-tools/.git",
     "prestart": "npm run swagger:verify_version",
     "start": "NODE_ENV=development node ./bin/www",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha test/ --recursive --reporter mochawesome --reporter-options reportDir=./out/mochawesome-report,reportTitle='CCXT-REST Test Results',reportPageTitle='CCXT-REST Test Results'",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha test/ --recursive --exclude test/generated/** --reporter mochawesome --reporter-options reportDir=./out/mochawesome-report,reportTitle='CCXT-REST Test Results',reportPageTitle='CCXT-REST Test Results'",
     "test:integration": "NODE_ENV=test node ./scripts/integration-tests",
     "posttest": "mkdir -p ./out/publish; cp -R ./out/mochawesome-report ./out/publish/test-results; cp ./out/publish/test-results/mochawesome.html ./out/publish/test-results/index.html",
     "test:dockerbuild": "docker build -t ccxtrest/ccxt-rest:testing .",
