upgrade dependencies, npm install works

--- a/package.json
+++ b/package.json
@@ -463,40 +463,28 @@
   "readme": "README.md",
   "main": "app.js",
   "dependencies": {
-    "async": "^2.6.2",
-    "bignumber.js": "^8.1.1",
-    "body-parser": "^1.18.3",
-    "ccxt": "^1.29.52",
-    "ethereumjs-abi": "^0.6.7",
-    "ethereumjs-util": "^6.1.0",
-    "express": "^4.16.4",
-    "flatted": "^2.0.0",
-    "js-yaml": "^3.13.1",
-    "jsonwebtoken": "^8.5.1",
-    "mariadb": "^2.0.3",
-    "mysql2": "^1.6.5",
-    "oas-tools": "^2.1.4",
-    "pg": "^7.10.0",
-    "pg-hstore": "^2.3.2",
-    "sequelize": "^5.7.6",
-    "sqlite3": "^4.0.6",
-    "tedious": "^6.1.1",
-    "umzug": "^2.2.0",
-    "web3": "^1.0.0-beta.52"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "mocha-parallel-tests": "^2.1.0",
-    "mochawesome": "^3.1.2",
-    "redoc-cli": "^0.8.3",
-    "should": "^7.1.0",
-    "supertest": "^4.0.2",
-    "uri-js": "^4.2.2",
-    "widdershins": "^3.6.7"
+    "async": "^3.2.4",
+    "bignumber.js": "^9.1.1",
+    "body-parser": "^1.20.1",
+    "ccxt": "^2.6.36",
+    "ethereumjs-abi": "^0.6.8",
+    "ethereumjs-util": "^7.1.5",
+    "express": "^4.18.2",
+    "flatted": "^3.2.7",
+    "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "mariadb": "^3.0.2",
+    "mysql2": "^3.0.1",
+    "oas-tools": "^3.0.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4",
+    "tedious": "^15.1.2",
+    "umzug": "^3.2.1",
+    "web3": "^1.8.1"
   },
   "scripts": {
-    "postinstall": "npm run swagger:verify_version && rm -rf ./node_modules/oas-tools/.git",
     "prestart": "npm run swagger:verify_version",
     "start": "NODE_ENV=development node ./bin/www",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha test/ --recursive --exclude test/generated/** --reporter mochawesome --reporter-options reportDir=./out/mochawesome-report,reportTitle='CCXT-REST Test Results',reportPageTitle='CCXT-REST Test Results'",
